--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path_provider: ^2.1.2
+  google_maps_flutter: ^2.6.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
