--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.2
   google_maps_flutter: ^2.6.0
   flutter_rating_bar: ^4.0.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
